Cleaned up .gitignore and build.gradle to run as expected.